[JDK17] EAP 7.4.4 image changes.